# SpectraCore

./: .gitignore  CHANGELOG.md  CI-001_COMPLETION.md  CICD_VALIDATION_CHECKLIST.md  DOC-001_COMPLETION.md  DOC-003_COMPLETION.md  FINAL_RELEASE_INSTRUCTIONS.md  GITHUB_RELEASE_TEMPLATE.md  LICENSE  PLATFORM_TESTING_STATUS.md  README.md  RELEASE_GUIDE.md  RELEASE_READY.txt  TEST_SUMMARY.md  UNITY-001_COMPLETION.md  UNITY-001_README.md  UNITY-001_STATUS.md  UNITY-001_TESTING_CHECKLIST.md  UNITY-002_COMPLETION.md  UNITY-002_COMPLETION_TEMPLATE.md  UNITY-007_COMPLETION.md  UNITY_INTEGRATION_SUMMARY.md  V1.1.0_TECHNICAL_DEEP_DIVE.md  V1.2.0_EXECUTIVE_SUMMARY.md  V1.2.0_PHASE_B_SUMMARY.md  V1.2.0_PLANNING.md  build-windows-from-linux.sh  check-cicd-status.sh  mark-platforms-complete.sh  test-macos.sh  test-windows.bat  validate_bandpass.py
.github/: CI_MANUAL_TEST.md  CI_STATUS_CHECK.md  CI_TEST_2.md  CI_VERIFICATION.md
.github/workflows/: build-multiplatform.yml  ci-fixed.yml  ci.yml  ci.yml.backup  release.yml
Samples~/AudioEffectsStudio/: README.md
Samples~/AudioVisualizer/: README.md
Samples~/BeatSyncedGame/: README.md
Samples~/FilterPlayground/: README.md
Samples~/SpectrogramAnalyzer/: README.md
docs/: API_Reference.md  BANDPASS_TEST_VALIDATION.md  CI_CD_Guide.md  CI_TESTING_CHECKLIST.md  CONTRIBUTING.md  CREATE_GITHUB_RELEASE.md  CrossPlatformBuildGuide.md  DOC-002_COMPLETION.md  EmscriptenSetupGuide.md  ExampleProjects.md  FILTER_DESIGNER_WINDOW_UPDATES.md  FIXING_CI_WORKFLOW.md  FIXING_GITHUB_ACTIONS.md  FilterDesignerGuide.md  INSTALLATION.md  MobilePlatformTesting.md  PLATFORM_TESTING_STATUS.md  PitchDetection.md  QUICK_START_CROSS_PLATFORM.md  RELEASE_NOTES_v1.0.0.md  RELEASE_NOTES_v1.1.0.md  RELEASE_NOTES_v1.2.0.md  RELEASE_NOTES_v1.3.0.md  RELEASE_VALIDATION_v1.1.0.md  SignalInspectorGuide.md  TASKS.md  Tutorials.md  UNITY-001_COMPLETION_TEMPLATE.md  UNITY-001_WINDOWS_TESTING_GUIDE.md  UNITY-002_MACOS_TESTING_GUIDE.md  UNITY-002_README.md  UNITY-002_TESTING_CHECKLIST.md  UNITY-006_COMPLETION.md  UNITY_INTEGRATION_SUMMARY.md  V1.1.0_COMPLETION_SUMMARY.md  V1.1.0_TROUBLESHOOTING_AND_FAQ.md  V1.2.0_PHASE_A_SUMMARY.md  Windows_Validation_Requirements.md  abi-design.md  architecture.md  (+3 more)
native/: CMakeLists.txt
native/cmake/: ios.toolchain.cmake  mingw-w64.cmake  testing.cmake  wasm.toolchain.cmake
native/include/: spectra_abi.h
native/include/spectra/: spectra.hpp
native/include/spectra/analysis/: correlation.hpp  hilbert.hpp  onset_detection.hpp  pitch_detection.hpp  psd.hpp  resample.hpp
native/include/spectra/core/: ring_buffer.hpp  types.hpp  window_functions.hpp
native/include/spectra/fft/: fft.hpp  stft.hpp
native/include/spectra/filters/: filter_design.hpp  fir_filter.hpp  iir_filter.hpp  streaming_filter.hpp
native/scripts/: build_all_mobile.sh  build_android.sh  build_ios.sh  build_wasm.sh
native/src/abi/: spectra_abi.cpp
native/src/analysis/: correlation.cpp  hilbert.cpp  onset_detection.cpp  pitch_detection.cpp  psd.cpp  resample.cpp
native/src/core/: ring_buffer.cpp  types.cpp  window_functions.cpp
native/src/fft/: fft.cpp  stft.cpp
native/src/filters/: filter_design.cpp  fir_filter.cpp  iir_filter.cpp  streaming_filter.cpp
native/tests/: CMakeLists.txt
native/tests/benchmarks/: bench_fft.cpp
native/tests/fixtures/matlab_reference/: .gitkeep
native/tests/unit/: test_abi_analysis.cpp  test_abi_errors.cpp  test_abi_fft.cpp  test_abi_filter.cpp  test_bessel.cpp  test_butterworth.cpp  test_chebyshev.cpp  test_correlation.cpp  test_elliptic.cpp  test_fft.cpp  test_filters.cpp  test_filtfilt.cpp  test_fir_design.cpp  test_firpm.cpp  test_freqz.cpp  test_hilbert.cpp  test_lfilter.cpp  test_onset_detection.cpp  test_pitch_detection.cpp  test_psd.cpp  test_resample.cpp  test_ring_buffer.cpp  test_stft.cpp  test_streaming_filter.cpp  test_window_functions.cpp
tools/matlab/: generate_test_vectors.m
tools/scripts/: build_all_platforms.sh  run_tests.sh
unity/: package.json
unity/Editor/: Spectra.Editor.asmdef
unity/Editor/Scripts/: FilterDesignerWindow.cs  SignalInspectorWindow.cs
unity/Runtime/: Spectra.Runtime.asmdef
unity/Runtime/Plugins/: .gitkeep  setup_meta_files.sh
unity/Runtime/Plugins/Android/: README.md
unity/Runtime/Plugins/Android/libs/arm64-v8a/: libspectra.so.meta.template
unity/Runtime/Plugins/Android/libs/armeabi-v7a/: libspectra.so.meta.template
unity/Runtime/Plugins/Android/libs/x86_64/: libspectra.so.meta.template
unity/Runtime/Plugins/WebGL/: README.md  libspectra.js.meta.template  libspectra.wasm.meta.template
unity/Runtime/Plugins/iOS/: README.md  libspectra.a.meta.template
unity/Runtime/Scripts/Analysis/: FFTAnalyzer.cs  OnsetDetector.cs  PitchDetector.cs  STFTAnalyzer.cs
unity/Runtime/Scripts/Core/: AudioPipeline.cs  DSP.cs  SpectraNative.cs
unity/Runtime/Scripts/Filters/: StreamingIIRFilter.cs
unity/Samples~/MobileValidation/: README.md
unity/Samples~/MobileValidation/Scripts/: MobilePerformanceBenchmark.cs  MobileSceneSetup.cs  MobileTestRunner.cs
unity/Tests/: StandalonePInvokeTest.cs
unity/Tests/Editor/: .gitkeep  SpectraComponentTests.cs  SpectraNativeTests.cs
unity/Tests/Runtime/: .gitkeep
