# SpectraCore Tests

# Unit tests
spectra_add_test(test_ring_buffer unit/test_ring_buffer.cpp)
spectra_add_test(test_window_functions unit/test_window_functions.cpp)
spectra_add_test(test_fft unit/test_fft.cpp)
spectra_add_test(test_stft unit/test_stft.cpp)
spectra_add_test(test_onset_detection unit/test_onset_detection.cpp)
spectra_add_test(test_butterworth unit/test_butterworth.cpp)
spectra_add_test(test_chebyshev unit/test_chebyshev.cpp)
spectra_add_test(test_elliptic unit/test_elliptic.cpp)
spectra_add_test(test_bessel unit/test_bessel.cpp)
spectra_add_test(test_lfilter unit/test_lfilter.cpp)
spectra_add_test(test_filtfilt unit/test_filtfilt.cpp)
spectra_add_test(test_filters unit/test_filters.cpp)
spectra_add_test(test_correlation unit/test_correlation.cpp)
spectra_add_test(test_streaming_filter unit/test_streaming_filter.cpp)
spectra_add_test(test_fir_design unit/test_fir_design.cpp)
spectra_add_test(test_firpm unit/test_firpm.cpp)
spectra_add_test(test_psd unit/test_psd.cpp)
spectra_add_test(test_hilbert unit/test_hilbert.cpp)
spectra_add_test(test_resample unit/test_resample.cpp)
spectra_add_test(test_freqz unit/test_freqz.cpp)
spectra_add_test(test_abi_fft unit/test_abi_fft.cpp)
spectra_add_test(test_abi_filter unit/test_abi_filter.cpp)
spectra_add_test(test_abi_analysis unit/test_abi_analysis.cpp)
spectra_add_test(test_abi_errors unit/test_abi_errors.cpp)

# Benchmarks (optional)
if(SPECTRA_BUILD_BENCHMARKS)
    add_executable(bench_fft benchmarks/bench_fft.cpp)
    target_link_libraries(bench_fft PRIVATE spectra)
endif()
